index responsive + hobbies

--- a/hobbies.html
+++ b/hobbies.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=B612+Mono|Permanent+Marker|Rubik+Mono+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=B612+Mono|Permanent+Marker|Rubik+Mono+One|Play&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/perso-hobbies.css">
     <title>¡El Payo Bestia!</title>
 </head>
@@ -18,16 +18,30 @@
     <main id="fondo" class="grid">
         <header class="flex cabecera">
             <nav class="grid navegacion">
-                <a href="index.html" class="enlaces B612">¿Quién soy?</a>
-                <a href="hobbies.html" class="this B612">Hobbies</a>
-                <a href="about.html" class="enlaces B612">Experiencia Profesional</a>
-                <a href="contact.html" class="enlaces B612">Contacto</a>
+                <a href="index.html" class="enlaces B612">
+                    Home
+                </a>
+                <a href="hobbies.html" class="this B612">
+                    ¿Quién es Adrián Pelayo?
+                </a>
+                <a href="about.html" class="enlaces B612">
+                    ¿Quién es el Payo Bestia?
+                </a>
+                <a href="contact.html" class="enlaces B612">
+                    Contáctame
+                </a>
             </nav>
         </header>
         <div class="flex contenedor-principal">
             <div class="grid portada">
-                <h2 class="B612"></h2>
-                <h1 class="Rubik"></h1>
+                <h2 class="B612">
+                    'A ver, cuéntanos quién es
+                </h2>
+                <h1 class="Play">
+                    Adrián Pelayo'
+                </h1>
+                <p>
+                </p>
             </div>
         </div>
     </main>
