--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
         integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=B612+Mono|Permanent+Marker|Rubik+Mono+One|Play&display=swap"
+    <link href="https://fonts.googleapis.com/css?family=B612+Mono|Permanent+Marker|Rubik+Mono+One|Major+Mono+Display&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <title>¡El Payo Bestia</title>
@@ -20,16 +20,24 @@
     <main id="fondo" class="grid">
         <header class="flex cabecera">
             <nav class="grid navegacion">
-                <a href="index.html" class="this B612">¿Quién soy?</a>
-                <a href="hobbies.html" class="enlaces B612">Personalidad & Hobbies</a>
-                <a href="about.html" class="enlaces B612">Experiencia Profesional</a>
-                <a href="contact.html" class="enlaces B612">Contacto</a>
+                <a href="index.html" class="this B612">
+                    Home
+                </a>
+                <a href="hobbies.html" class="enlaces B612">
+                    ¿Quién es Adrián Pelayo
+                </a>
+                <a href="about.html" class="enlaces B612">
+                    ¿Quién es el Payo Bestia?
+                </a>
+                <a href="contact.html" class="enlaces B612">
+                    Contáctame
+                </a>
             </nav>
         </header>
         <div class="flex contenedor-principal">
             <div class="grid portada">
                 <h2 class="B612">¡Hola! Mi nombre es</h2>
-                <h1 class="Play">Adrián Pelayo</h1>
+                <h1 class="Major">AdriAn pelAyo</h1>
                 <p class="B612">FullStack Developer<span class="barraDeEscribir">|</span>
                 </p>
             </div>
@@ -39,7 +47,7 @@
                 <h3 class="permanentMarker">Y te preguntarás... ¿Qué puedo encontrarme aquí?</h3>
                 <p class="B612">En esta página vas a conocer tanto a Adrián como a la Bestia que llevo dentro, ves a por
                     un café, evádete del mundo y presta atención...</p>
-                <p class="B612 parentesis">(también me puedes contactar rellenando el formulario de este botón)</p>
+                <p class="Major parentesis">(también me puedes contactar rellenando el formulario de este botón)</p>
                 <span><a href="./contact.html" class="permanentMarker boton-contacto">Contact me!</a></span>
             </div>
         </div>
