--- a/hobbies.html
+++ b/hobbies.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=B612+Mono|Permanent+Marker|Rubik+Mono+One|Play&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=B612+Mono|Permanent+Marker|Major+Mono+Display&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/perso-hobbies.css">
     <title>¡El Payo Bestia!</title>
 </head>
@@ -37,8 +37,8 @@
                 <h2 class="B612">
                     'A ver, cuéntanos quién es
                 </h2>
-                <h1 class="Play">
-                    Adrián Pelayo'
+                <h1 class="Major">
+                    AdriAn pelAyo'
                 </h1>
                 <p>
                 </p>
