--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             </nav>
         </header>
         <div class="flex contenedor-principal">
+            <img src="./assets/payobestia.jpg" alt="payoBestia">
             <div class="grid portada">
                 <h2 class="B612">¡Hola! Mi nombre es</h2>
                 <h1 class="Major">AdriAn pelAyo</h1>
