--- a/about.html
+++ b/about.html
@@ -10,12 +10,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=B612+Mono|Permanent+Marker|Major+Mono+Display&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/exp-prof.css">
+    <link rel="stylesheet" href="./css/pages/exp-prof.css">
     <title>¡El Payo Bestia!</title>
 </head>
 
 <body>
-    <main id="fondo" class="grid">
+    <main id="fondo" class="grid wrapper">
         <header class="flex cabecera">
             <nav class="grid navegacion">
                 <a href="index.html" class="enlaces B612">
