--- a/hobbies.html
+++ b/hobbies.html
@@ -10,7 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=B612+Mono|Permanent+Marker|Major+Mono+Display&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/perso-hobbies.css">
+    <link rel="stylesheet" href="./css/pages/perso-hobbies.css">
     <title>¡El Payo Bestia!</title>
 </head>
 
