JS adjust. CSS themes + adjusts. HTML edit and make content. v0.1.0.8

--- a/about.html
+++ b/about.html
@@ -54,7 +54,8 @@
                 <h1 class="Major">
                     el pAyo besTiA'
                 </h1>
-                <p>
+                <p class="B612">
+                    Desarrollo FrontEnd & BackEnd<span class="barraDeEscribir">|</span>
                 </p>
             </div>
         </div>
