--- a/hobbies.html
+++ b/hobbies.html
@@ -54,7 +54,8 @@
                 <h1 class="Major">
                     AdriAn pelAyo'
                 </h1>
-                <p>
+                <p class="B612">
+                    Loco por la programación, el skate, los tatuajes y el baloncesto<span class="barraDeEscribir">|</span>
                 </p>
             </div>
         </div>
