--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
         integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=B612+Mono|Permanent+Marker|Rubik+Mono+One|Major+Mono+Display&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css?family=B612+Mono|Permanent+Marker|Rubik+Mono+One|Major+Mono+Display&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./css/pages/index.css">
     <title>¡El Payo Bestia</title>
@@ -18,6 +19,10 @@
 
 <body>
     <main id="fondo" class="grid wrapper">
+        <div id="clickUp" class="button-up">
+            <i class="fas fa-chevron-up arrow-up">
+            </i>
+        </div>
         <header class="flex cabecera">
             <nav class="grid navegacion">
                 <a href="index.html" class="this B612">
