--- a/contact.html
+++ b/contact.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html data-localTheme="dark" data-colorTheme="red" lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="Mi página web personal">
-    <meta name="description" content="Aquí explico sobre mi, mis hobbies, experiencias tanto personales como profesionales e incluso un apartado para que puedan contactarme">
+    <meta name="description"
+        content="Aquí explico sobre mi, mis hobbies, experiencias tanto personales como profesionales e incluso un apartado para que puedan contactarme">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
         integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=B612+Mono|Gugi|Major+Mono+Display&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=B612+Mono|Gugi|Major+Mono+Display&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/pages/contactme.css">
     <title>¡Soy el Payo Bestia!</title>
 </head>
+
 <body>
     <main id="fondo" class="grid wrapper">
+        <div id="clickUp" class="button-up">
+            <i class="fas fa-chevron-up arrow-up">
+            </i>
+        </div>
         <header class="flex cabecera">
             <nav class="grid navegacion">
                 <a href="index.html" class="enlaces B612">
@@ -47,4 +55,5 @@
     </main>
     <script src="js/main.js"></script>
 </body>
+
 </html>
