--- a/about.html
+++ b/about.html
@@ -55,16 +55,89 @@
         <div class="flex contenedor-principal">
             <div class="grid portada">
                 <h2 class="B612">
-                    'A ver, cuéntanos quién es
+                    'A ver, cuéntanos qué es
                 </h2>
                 <h1 class="Major">
-                    el pAyo besTiA'
+                    el pAyo bestiA'
                 </h1>
                 <p class="B612">
                     Desarrollo FrontEnd & BackEnd<span class="barraDeEscribir">|</span>
                 </p>
             </div>
         </div>
+        <div class="flex contenedor-about">
+            <div class="grid contenedor-txt">
+                <h3 class="permanentMarker">
+                    Estudios de la Bestia
+                </h3>
+                <div class="flex contenedor-wrapper">
+                    <div class="grid info-about">
+                        <i class="fas fa-user-graduate"></i>
+                        <h4 class="permanentMarker">Educación Secundaria Obligatoria</h4>
+                        <p class="B612">INS Pablo Ruíz Picasso</p>
+                    </div>
+                    <div class="grid info-about">
+                        <i class="fas fa-terminal"></i>
+                        <h4 class="permanentMarker">FullStack Developer Bootcamp</h4>
+                        <p class="B612">GeeksHubs Academy</p>
+                    </div>
+                </div>
+                <p class="B612">
+                    Actualmente tengo conocimientos acerca de las bases de HTML5, CSS3, ES6.
+                </p>
+            </div>
+        </div>
+        <div class="flex contenedor-about wrapper-bg-prof">
+            <div class="grid contenedor-txt">
+                <h3 class="permanentMarker">
+                    Experiencia Profesional de la Bestia
+                </h3>
+                <div class="flex contenedor-wrapper">
+                    <div class="grid info-about">
+                            <i class="fas fa-cash-register"></i>
+                        <h4 class="permanentMarker">Caja / Reposición</h4>
+                        <p class="B612">Supercor - Passeig Maragall</p>
+                    </div>
+                    <div class="grid info-about">
+                            <i class="fas fa-project-diagram"></i>
+                        <h4 class="permanentMarker">Proyectos Bootcamp</h4>
+                        <p class="B612">Puedes consultar mi repositorio.</p>
+                        <p id="parent" class="B612">(Click al botón de GitHub abajo)</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="flex contenedor-bajo">
+            <div class="grid caja-texto">
+                <h3 class="permanentMarker">¡Hey! ¿Crees que has terminado?</h3>
+                <p class="B612">No te olvides darme feedback por redes sociales... O directamente enviarme un mensaje
+                    para preguntarme sobre lo que sea.</p>
+                <p class="B612">¡estaré encantado de escucharos!</p>
+                <p class="Major parentesis">(también me puedes contactar rellenando el formulario de este botón)</p>
+                <span><a href="./contact.html" class="permanentMarker boton-contacto">Contact me!</a></span>
+            </div>
+        </div>
+        <footer class="flex footer">
+            <div class="grid contenedor-footer">
+                <h4 class="B612">
+                    ¡Si quieres seguirme a mi, o los proyectos que hago, usa estos enlaces!
+                </h4>
+                <div class="flex contenedor-rrss">
+                    <a target="_blank" href="https://www.linkedin.com/in/el-payo-bestia/">
+                        <i class="fab fa-linkedin-in rrss color-lin">
+                        </i>
+                    </a>
+                    <a target="_blank" href="https://www.github.com/bigbae18">
+                        <i class="rrss color-git fab fa-github">
+                        </i>
+                    </a>
+                    <a target="_blank" href="https://www.instagram.com/el.payobestia18">
+                        <i class="rrss color-ig fab fa-instagram">
+                        </i>
+                    </a>
+                </div>
+            </div>
+        </footer>
     </main>
     <script src="js/main.js"></script>
 </body>
