--- a/hobbies.html
+++ b/hobbies.html
@@ -100,9 +100,9 @@
         </div>
         <div class="flex contenedor-bajo">
             <div class="grid caja-texto">
-                <h3 class="permanentMarker">Y te preguntarás... ¿Qué puedo encontrarme aquí?</h3>
-                <p class="B612">En esta página vas a conocer tanto a Adrián como a la Bestia que llevo dentro, ves a por
-                    un café, evádete del mundo y presta atención...</p>
+                <h3 class="permanentMarker">¡Hey! ¿Crees que has terminado?</h3>
+                <p class="B612">No te olvides darme feedback por redes sociales... O directamente enviarme un mensaje para preguntarme sobre lo que sea.</p>
+                <p class="B612">¡estaré encantado de escucharos!</p>
                 <p class="Major parentesis">(también me puedes contactar rellenando el formulario de este botón)</p>
                 <span><a href="./contact.html" class="permanentMarker boton-contacto">Contact me!</a></span>
             </div>
