--- a/about.html
+++ b/about.html
@@ -39,14 +39,14 @@
                 <p class="B612">Selecciona tu tema.</p>
                 <div class="flex theme-emoji">
                     <div class="grid local-theme">
-                        <button id="btn-dark" onclick="toggleThemeDark">🌑</button>
-                        <button id="btn-light" onclick="toggleThemeLight">☀️</button>
+                        <button id="btn-dark">🌑</button>
+                        <button id="btn-light">☀️</button>
                     </div>
                     <div class="grid session-theme">
-                        <button id="btn-red" onclick="toggleColorThemeRed">❤️️</button>
-                        <button id="btn-blue" onclick="toggleColorThemeBlue">💙</button>
-                        <button id="btn-purple" onclick="toggleColorThemePurple">💜</button>
-                        <button id="btn-green" onclick="toggleColorThemeGreen">💚</button>
+                        <button id="btn-red">❤️️</button>
+                        <button id="btn-blue">💙</button>
+                        <button id="btn-purple">💜</button>
+                        <button id="btn-green">💚</button>
                     </div>
                 </div>
         </header>
